Fix misspelling in the Acknowledgments file

--- a/app/views/about/acknowledgments/show.html.erb
+++ b/app/views/about/acknowledgments/show.html.erb
@@ -6,6 +6,6 @@
 </h3>
 
 <p>
-  We would like to extend our graditude to the maintainers of
+  We would like to extend our gratitude to the maintainers of
   the following open-source packages.
 </p>
