Push a lot of things
We've switched to Tailwind as our CSS framework, and I added a lot of stuff. Nothing's _remotely_ close to being usable, but I needed to push something.

--- a/app/javascript/stylesheets/main.scss
+++ b/app/javascript/stylesheets/main.scss
@@ -1,12 +1,13 @@
 // The main stylesheet
 
-// Reset styles
-@import 'reset';
-
-// Import components
-@import 'components/buttons';
+// Import Tailwind
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 // Configure the color for the progress bar
-.turbo-progress-bar {
-  background-color: #64b392;
+@layer components {
+  .turbo-progress-bar {
+    background-color: #64b392;
+  }
 }
