--- a/app/views/about/acknowledgments/show.html.erb
+++ b/app/views/about/acknowledgments/show.html.erb
@@ -9,3 +9,111 @@
   We would like to extend our gratitude to the maintainers of
   the following open-source packages.
 </p>
+
+<ul>
+  <li><a href="https://github.com/rails/rails">actioncable</a></li>
+  <li><a href="https://github.com/rails/rails">actionmailbox</a></li>
+  <li><a href="https://github.com/rails/rails">actionmailer</a></li>
+  <li><a href="https://github.com/rails/rails">actionpack</a></li>
+  <li><a href="https://github.com/rails/rails">actiontext</a></li>
+  <li><a href="https://github.com/rails/rails">actionview</a></li>
+  <li><a href="https://github.com/rails/rails">activejob</a></li>
+  <li><a href="https://github.com/rails/rails">activemodel</a></li>
+  <li><a href="https://github.com/rails/rails">activerecord</a></li>
+  <li><a href="https://github.com/rails/rails">activestorage</a></li>
+  <li><a href="https://github.com/rails/rails">activesupport</a></li>
+  <li><a href="https://github.com/sporkmonger/addressable">addressable</a></li>
+  <li><a href="https://github.com/anycable/anycable">anycable</a></li>
+  <li><a href="https://github.com/anycable/anycable">anycable-core</a></li>
+  <li><a href="https://github.com/anycable/anycable-rails">anycable-rails</a></li>
+  <li><a href="https://github.com/palkan/anyway_config">anyway_config</a></li>
+  <li><a href="https://github.com/whitequark/ast">ast</a></li>
+  <li><a href="https://github.com/bcrypt-ruby/bcrypt-ruby">bcrypt</a></li>
+  <li><a href="https://github.com/BetterErrors/better_errors">better_errors</a></li>
+  <li><a href="https://github.com/banister/binding_of_caller">binding_of_caller</a></li>
+  <li><a href="https://github.com/Shopify/bootsnap">bootsnap</a></li>
+  <li><a href="https://github.com/jimweirich/builder">builder</a></li>
+  <li><a href="https://github.com/teamcapybara/capybara">capybara</a></li>
+  <li><a href="https://github.com/enkessler/childprocess">childprocess</a></li>
+  <li><a href="https://github.com/rubychan/coderay">coderay</a></li>
+  <li><a href="https://github.com/ruby-concurrency/concurrent-ruby">concurrent-ruby</a></li>
+  <li><a href="https://github.com/mperham/connection_pool">connection_pool</a></li>
+  <li><a href="https://github.com/shrinerb/content_disposition">content_disposition</a></li>
+  <li><a href="https://github.com/rgrove/crass">crass</a></li>
+  <li><a href="https://github.com/ruby/debug">debug</a></li>
+  <li><a href="https://github.com/banister/debug_inspector">debug_inspector</a></li>
+  <li><a href="https://github.com/heartcombo/devise">devise</a></li>
+  <li><a href="https://github.com/halostatue/diff-lcs">diff-lcs</a></li>
+  <li><a href="https://github.com/janko/down">down</a></li>
+  <li><a href="https://github.com/jeremyevans/erubi">erubi</a></li>
+  <li><a href="https://github.com/ffi/ffi">ffi</a></li>
+  <li><a href="https://github.com/rails/globalid">globalid</a></li>
+  <li><a href="https://github.com/protocolbuffers/protobuf">google-protobuf</a></li>
+  <li><a href="https://github.com/googleapis/common-protos-ruby">googleapis-common-protos-types</a></li>
+  <li><a href="https://github.com/grpc/grpc">grpc</a></li>
+  <li><a href="https://github.com/ruby-i18n/i18n">i18n</a></li>
+  <li><a href="https://github.com/janko/image_processing">image_processing</a></li>
+  <li><a href="https://github.com/ruby/io-console">io-console</a></li>
+  <li><a href="https://github.com/ruby/irb">irb</a></li>
+  <li><a href="https://github.com/flavorjones/loofah">loofah</a></li>
+  <li><a href="https://github.com/mikel/mail">mail</a></li>
+  <li><a href="https://github.com/rails/marcel">marcel</a></li>
+  <li><a href="https://github.com/ruby/matrix">matrix</a></li>
+  <li><a href="https://github.com/banister/method_source">method_source</a></li>
+  <li><a href="https://github.com/seattlerb/minitest">minitest</a></li>
+  <li><a href="https://github.com/minimagick/minimagick">mini_magick</a></li>
+  <li><a href="https://github.com/discourse/mini_mime">mini_mime</a></li>
+  <li><a href="https://github.com/msgpack/msgpack-ruby">msgpack</a></li>
+  <li><a href="https://github.com/socketry/nio4r">nio4r</a></li>
+  <li><a href="https://github.com/sparklemotion/nokogiri">nokogiri</a></li>
+  <li><a href="https://github.com/ianwhite/orm_adapter">orm_adapter</a></li>
+  <li><a href="https://github.com/blacktear23/parallel">parallel</a></li>
+  <li><a href="https://github.com/whitequark/parser">parser</a></li>
+  <li><a href="https://github.com/ged/ruby-pg">pg</a></li>
+  <li><a href="https://github.com/weppos/publicsuffix-ruby">public_suffix</a></li>
+  <li><a href="https://github.com/puma/puma">puma</a></li>
+  <li><a href="https://github.com/ruby/racc">racc</a></li>
+  <li><a href="https://github.com/rack/rack">rack</a></li>
+  <li><a href="https://github.com/ncr/rack-proxy">rack-proxy</a></li>
+  <li><a href="https://github.com/rack/rack-test">rack-test</a></li>
+  <li><a href="https://github.com/rails/rails">rails</a></li>
+  <li><a href="https://github.com/rails/rails-dom-testing">rails-dom-testing</a></li>
+  <li><a href="https://github.com/rails/rails-html-sanitizer">rails-html-sanitizer</a></li>
+  <li><a href="https://github.com/rails/rails">railties</a></li>
+  <li><a href="https://github.com/sickill/rainbow">rainbow</a></li>
+  <li><a href="https://github.com/ruby/rake">rake</a></li>
+  <li><a href="https://github.com/redis/redis-rb">redis</a></li>
+  <li><a href="https://github.com/ammar/regexp_parser">regexp_parser</a></li>
+  <li><a href="https://github.com/ruby/reline">reline</a></li>
+  <li><a href="https://github.com/heartcombo/responders">responders</a></li>
+  <li><a href="https://github.com/ruby/rexml">rexml</a></li>
+  <li><a href="https://github.com/rspec/rspec-core">rspec-core</a></li>
+  <li><a href="https://github.com/rspec/rspec-expectations">rspec-expectations</a></li>
+  <li><a href="https://github.com/rspec/rspec-mocks">rspec-mocks</a></li>
+  <li><a href="https://github.com/rspec/rspec-rails">rspec-rails</a></li>
+  <li><a href="https://github.com/rspec/rspec-support">rspec-support</a></li>
+  <li><a href="https://github.com/rubocop/rubocop">rubocop</a></li>
+  <li><a href="https://github.com/rubocop/rubocop-ast">rubocop-ast</a></li>
+  <li><a href="https://github.com/rubocop/rubocop-rails">rubocop-rails</a></li>
+  <li><a href="https://github.com/rubocop/rubocop-rspec">rubocop-rspec</a></li>
+  <li><a href="https://github.com/ruby-next/ruby-next">ruby-next-core</a></li>
+  <li><a href="https://github.com/jfelchner/ruby-progressbar">ruby-progressbar</a></li>
+  <li><a href="https://github.com/libvips/ruby-vips">ruby-vips</a></li>
+  <li><a href="https://github.com/rubyzip/rubyzip">rubyzip</a></li>
+  <li><a href="https://github.com/SeleniumHQ/selenium">selenium-webdriver</a></li>
+  <li><a href="https://github.com/librariesio/semantic_range">semantic_range</a></li>
+  <li><a href="https://github.com/shrinerb/shrine">shrine</a></li>
+  <li><a href="https://github.com/mperham/sidekiq">sidekiq</a></li>
+  <li><a href="https://github.com/rails/spring">spring</a></li>
+  <li><a href="https://github.com/hotwired/stimulus-rails">stimulus-rails</a></li>
+  <li><a href="https://github.com/rails/thor">thor</a></li>
+  <li><a href="https://github.com/hotwired/turbo-rails">turbo-rails</a></li>
+  <li><a href="https://github.com/tzinfo/tzinfo">tzinfo</a></li>
+  <li><a href="https://github.com/janlelis/unicode-display_width">unicode-display_width</a></li>
+  <li><a href="https://github.com/wardencommunity/warden">warden</a></li>
+  <li><a href="https://github.com/titusfortner/webdrivers">webdrivers</a></li>
+  <li><a href="https://github.com/faye/websocket-driver-ruby">websocket-driver</a></li>
+  <li><a href="https://github.com/faye/websocket-extensions-ruby">websocket-extensions</a></li>
+  <li><a href="https://github.com/teamcapybara/xpath">xpath</a></li>
+  <li><a href="https://github.com/fxn/zeitwerk">zeitwerk</a></li>
+</ul>
