--- a/app/views/stream/show.html.erb
+++ b/app/views/stream/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Stream#show</h1>
 <p>Find me in app/views/stream/show.html.erb</p>
+
+<div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="76979871"></div>
